# tdx-prover-trigger

./: .env.example  Cargo.toml  LICENSE  README.md
src/: event_handler.rs  main.rs
