[package]
name = "tdx-prover-trigger"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["eventbridge"] }
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
aws-config = "1.6.1"
aws-sdk-eventbridge = "1.69.0"
